fix: experience visibility

--- a/src/components/home/experience/ExperienceElement.module.scss
+++ b/src/components/home/experience/ExperienceElement.module.scss
@@ -1,27 +1,12 @@
 @import "@/styles/variables";
-@import "@/styles/mixins";
 
-.content {
-  width: 100%;
-  margin: auto;
+.iconStyle {
+  background: $color-primary;
+  color: #fff;
+}
 
-  .verticalTimeline {
-    max-width: 100%;
-    width: 100%;
-
-    @include respond-to("lg") {
-      width: 95%;
-    }
-
-    .iconStyle {
-      background: $color-primary;
-      color: $on-color-primary;
-    }
-
-    .date {
-      color: $on-color-light;
-    }
-  }
+.date {
+  color: $on-color-light;
 }
 
 .contentContainer {
